# py2uml

./: CHANGELOG.md  MANIFEST.in  README.md  pytest.ini  setup.cfg  setup.py
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
src/py2uml/: __init__.py  _version.py  core.py
